PLANET-6197: Fix Twitter embed width on mobile screen
Ref: https://jira.greenpeace.org/browse/PLANET-6197

On posts (only), twitter embed is larger than a regular mobile width
(<500px).
The current rule only applies to posts, and only to twitter.
Twitter embeds on pages, and instagram embeds on posts/pages,
fits properly.
Removing the rule fixes the issue.

--- a/assets/src/scss/pages/post/_article-content.scss
+++ b/assets/src/scss/pages/post/_article-content.scss
@@ -250,12 +250,6 @@
   q {
     font-style: italic;
   }
-
-  iframe.instagram-media,
-  .twitter-tweet {
-    width: 500px !important;
-    max-width: 100%;
-  }
 }
 
 .post-content-lead {
